--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
     "name": "ngOnDemand",
     "description": "A way to load AngularJS controllers ondemand",
-    "version": "0.0.1",
+    "version": "0.0.2",
+    "main": "ngOnDemand.js",
     "authors": [
         "Zubair Lawrence <zubairla@lizardpro.com>"
     ],
